--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-langchain==0.1.16
-chromadb==0.4.24
-openai==1.23.6
-tiktoken==0.6.0
-PyMuPDF==1.23.8
-python-dotenv==1.0.0
-pandas==2.2.1
-streamlit==1.33.0
+streamlit==1.39.0
+pandas
+python-dotenv
+langchain>=0.3.0
+langchain-openai>=0.1.7
+langchain-chroma>=0.1.2
+chromadb>=0.5.3
+pypdf
+tiktoken
+openai>=1.40.0
